--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,50 @@
+* {
+    margin:;
+    border: 1px solid rgb(229, 229, 186);
+    background-color: rgb(255, 255, 255);
+    
+}
+
 p {
-    color:brown;
-    background-color:;
+    color:rgb(36, 56, 94);
+    background-color:rgb(245, 245, 245);
+    margin: 2px 0 0 2px;
+    padding: .5em ;
+    text-justify: newspaper;
+    display: flex;
 }
 
 div{
     background-color: beige;
+    margin:;
+    
+}
+
+ul{
+    padding: 1px;
+    margin: .5em 2em 2em;
+    display:flex;
+    background-color: whitesmoke;
 }
 li{
     color:red;
-    size-adjust: 220px;
+    margin: 2px 2px 2px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    display:flex;
 }
 h1{
     text-align: center;
-    color: cornflowerblue;
-    background-color: darkgray;
+    color: rgb(255, 255, 255);
+    background-color: rgb(216, 216, 216);
+    padding: .5px;
+    margin: 2px 280px 2px;
 }
-* {
-    border : 2px solid red;
+
+
+
+
+.img{
+    width: 250px;
+    height: auto;
 }
