--- a/styles.css
+++ b/styles.css
@@ -5,46 +5,52 @@
     
 }
 
-p {
+.text{
+    font-size: medium;
     color:rgb(36, 56, 94);
     background-color:rgb(245, 245, 245);
-    margin: 2px 0 0 2px;
+    margin: .5em 2em 2em;
     padding: .5em ;
-    text-justify: newspaper;
-    display: flex;
+    text-justify: ;
+    display: block;
+    
 }
 
 div{
-    background-color: beige;
+    background-color: rgb(104, 104, 104);
     margin:;
     
 }
 
 ul{
     padding: 1px;
-    margin: .5em 2em 2em;
-    display:flex;
+    margin: .5em 2em 1em;
+    display:inline-flex;
     background-color: whitesmoke;
+    align-content: center;
 }
 li{
     color:red;
-    margin: 2px 2px 2px;
+    margin: 2px 2px 1px;
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
-    display:flex;
+    display:inline-block;
 }
 h1{
     text-align: center;
     color: rgb(255, 255, 255);
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(36, 56, 94);
     padding: .5px;
     margin: 2px 280px 2px;
 }
-
-
-
-
 .img{
     width: 250px;
     height: auto;
+}
+.rectitle {
+    color:rgb(36, 56, 94);
+    background-color:rgb(245, 245, 245);
+    margin:5px;
+    padding: .5em ;
+    display: flex;
 }
